--- a/src/app/stocks/stocks.component.html
+++ b/src/app/stocks/stocks.component.html
@@ -1,8 +1,9 @@
 <p-table [columns]="cols" [value]="stocks">
   <ng-template pTemplate="header" let-columns>
       <tr>
-          <th *ngFor="let col of columns">
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
               {{col.header}}
+              <p-sortIcon [field]="col.field"></p-sortIcon>
           </th>
       </tr>
   </ng-template>
