- date selection change in stocks

--- a/src/app/stocks/stocks.component.html
+++ b/src/app/stocks/stocks.component.html
@@ -6,7 +6,7 @@
         <label for="todate">ToDate</label>
         <p-calendar [(ngModel)]="todate" dateFormat="mm/dd/yy"> </p-calendar>
         <!-- <input type="date" id="myDate" value="2018-03-27">            -->
-        <button onclick="submit">Show</button>
+        <button onclick="submit()">Show</button>
  </div>   
 <p-table [columns]="cols" [value]="stocks">
   <ng-template pTemplate="header" let-columns>
