- ui in progress

--- a/src/app/stocks/stocks.component.html
+++ b/src/app/stocks/stocks.component.html
@@ -1,27 +1,25 @@
 
-<div>     
-       <label for="fromdate">FromDate</label>
-      <!-- <input type="date" id="myDate" > -->
-       <p-calendar [(ngModel)]="fromdate" dateFormat="mm/dd/yy" > </p-calendar>
-        <label for="todate">ToDate</label>
-        <p-calendar [(ngModel)]="todate" dateFormat="mm/dd/yy"> </p-calendar>
-        <!-- <input type="date" id="myDate" value="2018-03-27">            -->
-        <button onclick="submit()">Show</button>
- </div>   
+<div>
+  <label for="fromdate">FromDate</label>
+  <p-calendar [(ngModel)]="fromdate" dateFormat="mm/dd/yy"> </p-calendar>
+  <label for="todate">ToDate</label>
+  <p-calendar [(ngModel)]="todate" dateFormat="mm/dd/yy"> </p-calendar>
+  <button onclick="getStocks()">Show</button>
+</div>
 <p-table [columns]="cols" [value]="stocks">
   <ng-template pTemplate="header" let-columns>
-      <tr>
-          <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-              {{col.header}}
-              <p-sortIcon [field]="col.field"></p-sortIcon>
-          </th>
-      </tr>
+    <tr>
+      <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+        {{col.header}}
+        <p-sortIcon [field]="col.field"></p-sortIcon>
+      </th>
+    </tr>
   </ng-template>
   <ng-template pTemplate="body" let-rowData let-columns="columns">
-      <tr>
-          <td *ngFor="let col of columns">
-                  {{rowData[col.field]}}
-          </td>
-      </tr>
+    <tr>
+      <td *ngFor="let col of columns">
+        {{rowData[col.field]}}
+      </td>
+    </tr>
   </ng-template>
 </p-table>
