--- a/src/app/mutual-funds/mutual-funds.component.html
+++ b/src/app/mutual-funds/mutual-funds.component.html
@@ -1,3 +1,43 @@
-<p>
-  mutual-funds works!
-</p>
+<div class="mutual-funds">
+
+  <p-sidebar [(visible)]="addTransaction" *ngIf="addTransaction"  position="right">
+    <app-addtransaction></app-addtransaction>
+  </p-sidebar>
+
+  <!--<div class="" *ngFor="let transaction of transactions">
+    <div class="row">
+      <div class="col-lg-5">{{transaction.FundName}}</div>
+      <div class="col-lg-1">{{transaction.Amount}}</div>
+      <div class="col-lg-1">{{transaction.Dividend}}</div>
+      <div class="col-lg-1">{{transaction.Units}}</div>
+      <div class="col-lg-2">{{transaction.PurchaseNAV}}</div>
+      <div class="col-lg-2">{{transaction.CurrentNAV}}</div>
+    </div>
+  </div>-->
+  <!--<p-treeTable [value]="transactions">
+    <p-column field="FundName" header="Name"></p-column>
+    <p-column field="Amount" header="Amount"></p-column>
+    <p-column field="Dividend" header="Dividend"></p-column>
+    <p-column field="Units" header="Units"></p-column>
+    <p-column field="PurchaseNAV" header="PurchaseNAV"></p-column>
+    <p-column field="CurrentNAV" header="CurrentNAV"></p-column>
+  </p-treeTable>-->
+  <!--<p-treeTable [value]="files">
+    <p-column>
+      <ng-template let-col let-node="rowData" pTemplate="header">
+        <button type="button" pButton label="Refresh"></button>
+      </ng-template>
+      <ng-template let-col let-node="rowData" pTemplate="body">
+        <input [(ngModel)]="node.data.name" type="text" style="width:100%">
+      </ng-template>
+    </p-column>
+  </p-treeTable>-->
+  <!--<h2>Suppliers</h2>
+  <p-treeTable [value]="nodes" (onNodeExpand)="nodeExpand($event)">
+    <p-header>List of Suppliers 2</p-header>
+    <p-column field="CompanyName" header="Company Name"></p-column>
+    <p-column field="City" header="City"></p-column>
+    <p-column field="Region" header="Region"></p-column>
+    <p-column field="Country" header="Country"></p-column>
+  </p-treeTable>-->
+</div>
