--- a/src/app/mutual-funds/mutual-funds.component.html
+++ b/src/app/mutual-funds/mutual-funds.component.html
@@ -1,6 +1,6 @@
 <div class="mutual-funds">
 
-  <p-sidebar [(visible)]="addTransaction" *ngIf="addTransaction"  position="right">
+  <p-sidebar [(visible)]="addTransaction" *ngIf="addTransaction" position="right" styleClass="ui-sidebar-md">
     <app-addtransaction></app-addtransaction>
   </p-sidebar>
 
