--- a/src/app/mutual-funds/redeemunits/redeemunits.component.html
+++ b/src/app/mutual-funds/redeemunits/redeemunits.component.html
@@ -52,4 +52,10 @@
       </p-dropdown>
     </div>
   </div>
+
+  <div class="row element">
+    <div class="col-lg-2">
+      <p-button (onClick)="SaveTransaction()" icon="pi pi-check" iconPos="right" label="Save"></p-button>
+    </div>
+  </div>
 </div>
