--- a/src/app/mutual-funds/redeemunits/redeemunits.component.html
+++ b/src/app/mutual-funds/redeemunits/redeemunits.component.html
@@ -30,7 +30,7 @@
     <div class="col-lg-3">
       <span class="label">Folio</span>
       <p-dropdown [options]="folios" [(ngModel)]="selectedFolios" optionLabel="name" placeholder="Folio" autoWidth="false" [style]="{'width':'100%'}"
-                  [showClear]="true" filter="true" [disabled]="disableControls.folios">
+                  [showClear]="true" filter="true" [disabled]="disableControls.folios" (onChange)="gettransactions()">
       </p-dropdown>
     </div>
     <div class="col-lg-3">
@@ -54,9 +54,38 @@
   </div>
 
   <div class="row element">
+    <div class="col-lg-12">
+      <p-table [columns]="cols" [value]="transaction" [scrollable]="true" scrollHeight="200px">
+        <ng-template pTemplate="header" let-columns>
+          <tr>
+            <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+              {{col.header}}
+              <p-sortIcon [field]="col.field"></p-sortIcon>
+            </th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-rowData let-columns="columns">
+          <tr>
+            <ng-container *ngFor="let col of columns">
+              <!--<td [ngIf]="col.field == 'PurchaseDate'" [ngIfElse]="elseDateBlock">-->
+              <td *ngIf="col.field == 'PurchaseDate'; else elseDateBlock">
+                {{rowData[col.field]  |  date }}
+              </td>
+              <ng-template #elseDateBlock>
+                <td>{{rowData[col.field]}}</td>
+              </ng-template>
+            </ng-container>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
+
+  <div class="row element">
     <div class="col-lg-2">
       <p-button class="disabled" *ngIf="disabled" icon="pi pi-check" iconPos="right" label="Save" disabled="true"></p-button>
       <p-button (onClick)="SaveTransaction()" *ngIf="!disabled" icon="pi pi-check" iconPos="right" label="Save"></p-button>
     </div>
   </div>
+
 </div>
