--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <p-menubar [model]="menuItems"></p-menubar>
 
 <div class="" style="margin-top: 10px"></div>
-<router-outlet class="bodyEle"></router-outlet>
+<router-outlet class="bodyEle">
+
+</router-outlet>
+
+<p-toast [style]="{marginTop: '80px'}" position="top-right" key="tl"></p-toast>
