--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 
 </router-outlet>
 
-<p-toast [style]="{marginTop: '80px'}" position="top-right" key="tl"></p-toast>
+<!--<button (click)="showSuccess()">Show</button>
+<p-toast [style]="{marginTop: '80px'}" position="top-right" key="tl"></p-toast>-->
