--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,15 @@
 @import "~bootstrap/dist/css/bootstrap.css";
+@import '~ngx-toastr/toastr.css';
 
 styles: [ "styles.css",
 "../node_modules/font-awesome/css/font-awesome.min.css",
 "../node_modules/primeng/resources/primeng.min.css",
-"../node_modules/primeng/resources/themes/darkness/theme.css"
+"../node_modules/primeng/resources/themes/darkness/theme.css",
+"../node_modules/primeicons/primeicons.css",
+"../node_modules/primeng/resources/themes/nova-light/theme.css",
+  "../node_modules/primeng/resources/primeng.min.css",
+  "../node_modules/primeicons/primeicons.css",
+  "../node_modules/primeicons/resources/primeicons.css",
 ]
 
 body {
