--- a/src/app/home-expenses/expense/expense.component.html
+++ b/src/app/home-expenses/expense/expense.component.html
@@ -1,10 +1,10 @@
-<h1 style="font-weight:normal; text-align: center;">Add Expense</h1>
+<h2 style="font-weight:normal; text-align: center;">Add Expense</h2>
 
 <div class="elements home-expenses">
   <div class="row element">
     <div class="col-lg-12">
       <span class="label">Date</span>
-      <p-calendar [(ngModel)]="purchasedate" class="col-lg-12" [inputStyle]="{'width':'100px'}"></p-calendar>
+      <p-calendar [(ngModel)]="transaction.Date" class="col-lg-12" [showIcon]="true"></p-calendar>
     </div>
     <div class="col-lg-6">
       <span class="label">Group</span>
