--- a/src/app/home-expenses/expense/expense.component.html
+++ b/src/app/home-expenses/expense/expense.component.html
@@ -4,7 +4,7 @@
   <div class="row element">
     <div class="col-lg-12">
       <span class="label">Date</span>
-      <p-calendar [(ngModel)]="transaction.Date" class="col-lg-12" [showIcon]="true"></p-calendar>
+      <p-calendar [(ngModel)]="transaction.Date" class="col-lg-12" [showIcon]="true" (onSelect)="onChangeDate(event)"></p-calendar>
     </div>
     <div class="col-lg-6">
       <span class="label">Group</span>
