--- a/src/app/home-expenses/home-expenses.component.html
+++ b/src/app/home-expenses/home-expenses.component.html
@@ -14,10 +14,8 @@
   </div>
   <div class="">
     <p-tabView (onChange)="tabChange($event)">
-      <p-tabPanel [header]="item.AccountDetails.DisplayName" [closable]="true" *ngFor="let item of transactions;  let i = index" [selected]="i == selectedTab">
-        <p-table [columns]="cols" [value]="item.Transactions"
-                 [scrollable]="true" scrollHeight="350px"
-                 [resizableColumns]="true"
+      <p-tabPanel [header]="account.DisplayName" [closable]="true" *ngFor="let account of _homeExpensesService.acounts;  let i = index" [selected]="i == selectedTab">
+        <!--<p-table [columns]="cols" [value]="item.Transactions" [scrollable]="true" scrollHeight="350px" [resizableColumns]="true"
                  selectionMode="single" [(selection)]="selectedTransaction" (onRowSelect)="onRowSelect($event)">
           <ng-template pTemplate="colgroup" let-columns>
             <colgroup>
@@ -34,7 +32,6 @@
           </ng-template>
           <ng-template pTemplate="body" let-rowData let-columns="columns">
             <tr [pSelectableRow]="rowData">
-              <!--<td *ngFor="let col of columns">{{rowData[col.field]}}</td>-->
               <td>{{rowData.Date  | date:'MM/dd/yyyy'}}</td>
               <td>{{rowData.ExpenseGroup.Name}}</td>
               <td>{{rowData.ExpenseSubGroup.SubGroupName}}</td>
@@ -49,7 +46,7 @@
               <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Add"></button>
             </div>
           </ng-template>
-        </p-table>
+        </p-table>-->
       </p-tabPanel>
     </p-tabView>
   </div>
